# deribit-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  auth-server.js  docker-compose.yml  mcp-server.js  mcp-sse-oauth-server.js  package-lock.json  package.json  proxy.js  pyproject.toml  render.yaml  server.js  start.js
scripts/: healthcheck.sh  install.sh  quick-install.sh  test_connection.py  test_full_mcp_flow.sh  test_mcp_client.py  test_simple_sse.sh  test_sse_manual.sh  uninstall.sh  update.sh  verify_config.sh
src/: index.ts
src/deribit_mcp/: __init__.py  analytics.py  client.py  config.py  diagnostics.py  http_server.py  models.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_analytics.py  test_client.py  test_tools.py
